--- a/views/login.hbs
+++ b/views/login.hbs
@@ -12,9 +12,8 @@
 <body>
     {{!-- Navigation links --}}
     <nav>
-        <h4>Node MySQL Login</h4>
+        <h4>TradeStation Order Panel</h4>
         <ul>
-            <li><a href="/">Home</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Register</a></li>
         </ul>
